# SynaDB

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  READMEv0.1.0.md  SECURITY.md  THIRD_PARTY_LICENSES  temp_html.txt  test_debug.db  test_method.db  test_model.db  test_reopen.db  test_studio.db  test_text.db
.github/workflows/: ci.yml  release.yml  wiki-sync.yml
assets/: README.md
benchmarks/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
benchmarks/results/: report.md
benchmarks/src/: ai_native_bench.rs  cascade_bench.rs  config.rs  faiss_bench.rs  main.rs  mixed_bench.rs  read_bench.rs  report.rs  reproducibility.rs  storage_bench.rs  tensor_bench.rs  vector_bench.rs  write_bench.rs
benchmarks/src/competitors/: duckdb_bench.rs  leveldb_bench.rs  mod.rs  rocksdb_bench.rs  sqlite_bench.rs
demos/: .gitignore  README.md
demos/cpp/: Makefile  README.md  basic_usage.c  embedded_minimal.c  raii_wrapper.cpp
demos/cpp/cmake_example/: CMakeLists.txt  main.cpp
demos/huggingface/: README.md  faiss_integration.py
demos/huggingface/datasets/: cifar10_loader.py  common_voice.py  imdb_loader.py  mnist_loader.py  wikitext_loader.py
demos/huggingface/models/: checkpoint_store.py  feature_store.py  inference_demo.py  pytorch_dataloader.py  training_loop.py
demos/huggingface/timeseries/: anomaly_detection.py  backtesting.py  feature_engineering.py  lstm_forecasting.py  sensor_simulation.py
demos/notebooks/: SynaDB_Playground.ipynb
demos/python/: README.md  async_operations.py  basic_usage.py  context_manager.py  demo_studio.py  numpy_integration.py  pandas_integration.py  pyproject.toml  requirements.txt  rl_experience_demo.py  setup.py
demos/python/examples/: hybrid_rag_bge_m3.py  hybrid_rag_bge_m3_benchmark.py  rag_amazon_reviews.py  robotics_sensor_fusion.py
demos/python/synadb/: STUDIO_DOCS.md  __init__.py  gwi.py  vector.py  wrapper.py
demos/python/synadb/integrations/: llamaindex.py
demos/python/tests/: test_experiment.py  test_integrations.py  test_ml_framework_integration.py  test_pandas.py  test_sparse_vector_store.py  test_tensor_engine.py  test_tensor_torch.py  test_tensorflow_dataset.py  test_torch_dataset.py  test_vector_store.py  test_wrapper.py
demos/pythonanywhere/: README.md  flask_app.py  requirements.txt  wsgi.py
demos/pythonanywhere/templates/: index.html
demos/rust/: Cargo.toml  README.md  basic_crud.rs  compression.rs  concurrent.rs  hybrid_rag_example.rs  main.rs  recovery.rs  tensor_extraction.rs  time_series.rs
demos/v1.0.0/: README.md  requirements-full.txt  requirements.txt  validate_notebooks.py
demos/v1.0.0/data/: .gitkeep
demos/v1.0.0/data_loading/: .gitkeep  07_hdf5_tfrecord.ipynb  08_zarr_lmdb.ipynb  09_parquet_arrow.ipynb
demos/v1.0.0/experiment_tracking/: .gitkeep  04_mlflow.ipynb  05_wandb.ipynb  06_neptune_clearml.ipynb
demos/v1.0.0/llm_frameworks/: .gitkeep  12_langchain.ipynb  13_llamaindex.ipynb  14_haystack_semantic_kernel.ipynb  generate_haystack_sk_notebook.py  generate_langchain_notebook.py  generate_llamaindex_notebook.py
demos/v1.0.0/model_registry/: .gitkeep  10_mlflow_dvc.ipynb  11_huggingface_hub.ipynb  generate_notebooks.py
demos/v1.0.0/specialized/: .gitkeep  15_gpu_performance.ipynb  16_timeseries.ipynb  17_feature_store.ipynb  18_end_to_end_pipeline.ipynb  19_reinforcement_learning.ipynb  generate_end_to_end_notebook.py  generate_feature_store_notebook.py  generate_gpu_notebook.py  generate_rl_notebook.py  generate_timeseries_notebook.py
demos/v1.0.0/tests/: __init__.py  test_notebook_structure.py  test_utils.py
demos/v1.0.0/utils/: __init__.py  benchmark.py  charts.py  notebook_utils.py  system_info.py
demos/v1.0.0/vector_stores/: .gitkeep  01_chroma_comparison.ipynb  02_faiss_backend.ipynb  03_weaviate_milvus.ipynb  04_qdrant_lancedb.ipynb  generate_notebooks.py
files/: Cargo.toml  THIRD_PARTY_LICENSES
files/demos/huggingface/: faiss_integration.py
files/python/synadb/: vector_store.py
files/src/: faiss_index.rs  vector.rs
include/: synadb.h
src/: arch.rs  compression.rs  distance.rs  engine.rs  error.rs  experiment.rs  faiss_index.rs  ffi.rs  ffi_sparse.rs  gpu.rs  gwi.rs  hnsw.rs  lib.rs  mmap.rs  mmap_vector.rs  model_registry.rs  sparse_vector.rs  sparse_vector_store.rs  tensor.rs  types.rs  vector.rs
src/cascade/: append_graph.rs  bucket.rs  config.rs  graph.rs  index.rs  lsh.rs  mmap_index.rs  mmap_store.rs  mod.rs  simple_lsh.rs
syna-cli/: Cargo.toml  README.md
syna-cli/src/: main.rs
tests/: arch_benchmark.rs  atom_roundtrip.rs  cascade_search.proptest-regressions  cascade_search.rs  compaction.rs  compression.rs  concurrency.rs  delete_operations.rs  experiment_metrics.rs  faiss_index.rs  gwi_persistence.rs  header_roundtrip.rs  hnsw_recall.rs  isolation.rs  memory_leak_test.rs  model_checksum.rs  recovery.proptest-regressions  recovery.rs  schema_free.rs  sparse_ffi.rs  sparse_persistence.rs  sparse_roundtrip.proptest-regressions  sparse_roundtrip.rs  sparse_store_search.rs  stress_test.rs  tensor.rs  tensor_batch.rs  vector_ffi.rs  vector_roundtrip.rs  vector_search.rs  write_read.rs
tests/integration/: python_test.py
website/: README.md  index.html  playground.css  playground.html  style.css
website/js/: background.js  playground.js
wiki/: API-Reference.md  Architecture.md  Changelog.md  Contributing.md  Embedding-Batch-Size-Guide.md  Getting-Started.md  Home.md  Migration-Guide.md  Roadmap.md  _Sidebar.md
