[package]
name = "synadb"
version = "1.0.6"
edition = "2021"
authors = ["gtava5813"]
description = "An AI-native embedded database"
license = "LicenseRef-SynaDB"
repository = "https://github.com/gtava5813/SynaDB"
homepage = "https://synadb.ai"
documentation = "https://docs.rs/synadb"
readme = "README.md"
keywords = ["database", "embedded", "ai", "ml", "tensor"]
categories = ["database", "data-structures", "science"]
rust-version = "1.81.0"
exclude = [
    "demos/",
    "assets/",
    "website/",
    "wiki/",
    "benchmarks/",
    "files/",
    "syna-cli/",
    ".github/",
    "*.db",
    "*.txt",
    "READMEv0.1.0.md",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = "0.9"
once_cell = "1.18"
parking_lot = "0.12"
libc = "0.2"
lz4_flex = "0.11"
thiserror = "1.0"
sha2 = "0.10"
rand = "0.8"
rand_distr = "0.4"

uuid = { version = "1.8", features = ["v4"] }
tokio = { version = "1.0", features = ["fs", "rt-multi-thread", "macros", "io-util"], optional = true }
faiss = { version = "0.12", optional = true }  # FAISS bindings for billion-scale vector search

[features]
default = []
gpu = []  # Enable GPU Direct memory access (requires CUDA toolkit)
async = ["tokio"]  # Enable async parallel chunk writes for high-throughput tensor storage
faiss = ["dep:faiss"]  # Enable FAISS index integration for billion-scale vector search
faiss-gpu = ["faiss"]  # Enable FAISS with GPU support (requires CUDA)

[dev-dependencies]
proptest = "1.4"
tempfile = "3.10"

# Internal DAVO demos (gitignored, not for release)
[[example]]
name = "davo_demo"
path = ".kiro/internal-demos-tests-rust-python-cpp/rust/davo_demo.rs"

[[example]]
name = "example_01_sensor_ingestion"
path = ".kiro/internal-demos-tests-rust-python-cpp/rust/example_01_sensor_ingestion.rs"

[[example]]
name = "example_02_cache_eviction"
path = ".kiro/internal-demos-tests-rust-python-cpp/rust/example_02_cache_eviction.rs"

[[example]]
name = "example_03_ml_feature_store"
path = ".kiro/internal-demos-tests-rust-python-cpp/rust/example_03_ml_feature_store.rs"

[[example]]
name = "example_04_embedding_freshness"
path = ".kiro/internal-demos-tests-rust-python-cpp/rust/example_04_embedding_freshness.rs"

[[example]]
name = "example_05_gradient_checkpointing"
path = ".kiro/internal-demos-tests-rust-python-cpp/rust/example_05_gradient_checkpointing.rs"

# V2 examples using FreshnessIndexV2 (addresses O(N) scan critique)
[[example]]
name = "example_01_sensor_ingestion_v2"
path = ".kiro/internal-demos-tests-rust-python-cpp/rust/example_01_sensor_ingestion_v2.rs"

[[example]]
name = "example_02_cache_eviction_v2"
path = ".kiro/internal-demos-tests-rust-python-cpp/rust/example_02_cache_eviction_v2.rs"
