[package]
name = "Syna_benchmarks"
version = "0.1.0"
edition = "2021"
description = "Benchmark suite for Syna database"

[features]
default = []
duckdb = ["dep:duckdb"]
leveldb = ["dep:rusty-leveldb"]
rocksdb = ["dep:rocksdb"]
faiss = ["synadb/faiss"]

[dependencies]
# Syna core
synadb = { path = ".." }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Competitor databases
rusqlite = { version = "0.31", features = ["bundled"] }
duckdb = { version = "1.0", features = ["bundled"], optional = true }
rusty-leveldb = { version = "3.0", optional = true }
rocksdb = { version = "0.22", optional = true }  # Requires C++ toolchain

# Utilities
rand = "0.8"
rand_chacha = "0.3"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.10"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
num_cpus = "1.16"
sysinfo = "0.30"

# Platform-specific dependencies for cache flushing
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem"] }

# Report generation
plotters = "0.3"

[[bin]]
name = "Syna_bench"
path = "src/main.rs"

# Criterion benchmarks
[[bench]]
name = "ai_native_bench"
harness = false
path = "src/ai_native_bench.rs"

